Make FileReaders return List<CharSequence>